<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:foregroundTint="@color/white"
    tools:context=".DrawingActivity">

    <SeekBar
        android:id="@+id/seek_width"
        android:layout_width="141dp"
        android:layout_height="23dp"
        android:max="200"
        android:min="10"
        android:progress="50"
        android:progressBackgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fab_color"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.jsoft.diffusionpaint.component.DrawingView
        android:id="@+id/drawing_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/undo"
        app:layout_constraintEnd_toStartOf="@+id/fab_redo"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_undo_white_24dp"
        app:backgroundTint="@color/light_blue_A400"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_redo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/redo"
        android:src="@drawable/ic_redo_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/light_blue_A400"
        app:tint="@android:color/white" />




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/save_sketch"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/delete_sketch"
        android:src="@drawable/ic_delete_white_24dp"
        app:layout_constraintStart_toEndOf="@+id/fab_save"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/white" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/stroke_color"
        android:src="@drawable/ic_palette_white_24dp"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_eraser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/stroke_color"
        android:src="@drawable/ic_eraser"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_color"
        app:tint="@android:color/white" />



    <com.jsoft.diffusionpaint.helper.CircleView
        android:id="@+id/circle_pen"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_eraser" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_stable_diffusion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/stroke_width"
        android:src="@drawable/ic_magic"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white" />

    <ImageView
        android:id="@+id/img_drawing_mode"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_brush"
        app:tint="@android:color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>